# SimpleColoredLogs

./: .gitignore  README.md  pyproject.toml  requirements.txt
log/: __init__.py  logger.py  py.typed
logger/: logger.py
logs/: __init__.py  logger.py
