[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SimpleColoredLogs"
version = "1.2.0"
description = "Ein vollständiger, produktionsreifer Logger mit erweiterten Features für Python-Anwendungen und Discord Bots."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "OPPRO.NET Development" },
    {name = "OPPRO.NET Network" },
    {name = "LennyPegauOfficial117" }

]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "colorama>=0.4.6"
]
keywords = ["logger", "terminal", "python", "colored", "discord", "logs"]
[project.urls]
"Homepage" = "https://github.com/Medicopter117/SimpleColoredLogs"
"Repository" = "https://github.com/Medicopter117/SimpleColoredLogs"
"Bug Tracker" = "https://github.com/Medicopter117/SimpleColoredLogs/issues"
